--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@g-loot/react-tournament-brackets": "^1.0.30",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,12 +21,11 @@
     "i18next": "^23.4.6",
     "joi": "^17.13.3",
     "react": "^18.2.0",
-    "react-bracket": "^0.0.4",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.0.7",
+    "styled-components": "^4.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "surge": "^0.23.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1"
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "surge": "^0.23.1"
   }
 }
