--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^23.4.6",
     "joi": "^17.13.3",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
     "react-router-dom": "^6.15.0",
