index.tsxのパス修正、reportWebVitalsのコメントアウト。firebase.tsからgetStorageのインポートを削除。package.jsonにpreviewスクリプトを追加し、devDependenciesにserveを追加。index.htmlの言語設定を英語に変更し、メタタグを更新。AdminLayoutコンポーネントのスタイルを調整し、ツールバーやサイドバーの表示を改善。

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && npx surge ./build sports-event-manager.surge.sh"
+    "deploy": "npm run build && npx surge ./build sports-event-manager.surge.sh",
+    "preview": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "surge": "^0.23.1"
+    "surge": "^0.23.1",
+    "serve": "^14.2.1"
   }
 }
