--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^23.4.6",
     "joi": "^17.13.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
@@ -59,7 +60,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "surge": "^0.23.1",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "surge": "^0.23.1"
   }
 }
