--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-components": "^5.1.26",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "serve": "^14.2.1",
