--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
     "framer-motion": "^10.16.1",
     "i18next": "^23.4.6",
     "joi": "^17.13.3",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "^5.0.1",
     "styled-components": "^4.1.3",
     "typescript": "^4.9.5",
+    "typescript-eslint": "^8.27.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && npx surge ./build sports-event-manager.surge.sh",
-    "preview": "serve -s build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "build:static": "next build && next export -o out"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +61,8 @@
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-components": "^5.1.26",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "serve": "^14.2.1",
     "surge": "^0.23.1"
