--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@g-loot/react-tournament-brackets": "^1.0.30",
@@ -21,7 +24,6 @@
     "i18next": "^23.4.6",
     "joi": "^17.13.3",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
