--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.3.0",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^10.16.1",
@@ -60,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-components": "^5.1.26",
     "eslint-plugin-jsx-a11y": "^6.10.2",
