--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^4.1.3",
