--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.3.0",
